<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        tools:context=".addimc.AddImcFragment">


        <!-- Altura -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_altura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/add_bmi_card_margin"
            android:elevation="@dimen/add_bmi_card_elevation"
            android:padding="@dimen/add_bmi_card_padding"
            app:cardBackgroundColor="@color/light_grey"
            app:cardCornerRadius="@dimen/add_bmi_card_elevation"
            app:layout_constraintBottom_toTopOf="@+id/mcv_peso"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/add_bmi_card_padding">

                <TextView
                    android:id="@+id/tv_text_altura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/add_bmi_card_title_margin"
                    android:text="@string/height"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/add_bmi_card_title_textsize"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_altura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/add_bmi_card_title_margin"
                    android:hint="@string/_0"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/light_grey"
                    android:textSize="@dimen/add_bmi_card_value_textsize"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_text_altura" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/add_bmi_card_unit_margin"
                    android:layout_marginBottom="@dimen/add_bmi_card_unit_margin"
                    android:text="@string/cm"
                    android:textColor="@color/light_grey"
                    android:textSize="@dimen/add_bmi_card_unit_textsize"
                    app:layout_constraintBottom_toBottomOf="@+id/et_altura"
                    app:layout_constraintLeft_toRightOf="@+id/et_altura" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


        <!-- Peso  Material CardV-->

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_peso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/add_bmi_card_margin"
            android:elevation="@dimen/add_bmi_card_elevation"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="@dimen/add_bmi_card_elevation"
            app:layout_constraintBottom_toTopOf="@+id/btn_calcularImc"
            app:layout_constraintTop_toBottomOf="@+id/mcv_altura"
            tools:layout_editor_absoluteX="-9dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/add_bmi_card_padding">

                <TextView
                    android:id="@+id/tv_title_peso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/add_bmi_card_title_margin"
                    android:text="@string/weight"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/add_bmi_card_title_textsize"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_peso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/add_bmi_card_title_margin"
                    android:hint="@string/_0"
                    android:inputType="numberDecimal"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/light_grey"
                    android:textSize="@dimen/add_bmi_card_value_textsize"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_peso" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/add_bmi_card_unit_margin"
                    android:layout_marginBottom="@dimen/add_bmi_card_unit_margin"
                    android:text="@string/kg"
                    android:textColor="@color/light_grey"
                    android:textSize="@dimen/add_bmi_card_unit_textsize"
                    app:layout_constraintBottom_toBottomOf="@+id/et_peso"
                    app:layout_constraintLeft_toRightOf="@+id/et_peso" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/btn_calcularImc"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button_rounded"
            android:text="IMC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mcv_peso" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

